add the.hamburguer menu for responsive and add js file for toogle the menu on.and off

--- a/clone/style.css
+++ b/clone/style.css
@@ -15,7 +15,7 @@ body {
 	margin: 0 auto;
 
 	color: #f3f3f3;
-	padding-top: 2rem;
+	padding-top: 1rem;
 }
 nav,
 header,
@@ -62,7 +62,7 @@ nav ul li {
 }
 .header_text {
 	font-weight: 900;
-	font-size: 2.5rem;
+	font-size: 2rem;
 	color: #424242;
 }
 .header_text a {
@@ -220,13 +220,27 @@ footer a {
 }
 @media (max-width: 900px) {
 	.toggle {
-		display: block;
+		display:inline-block;
 		padding: 1rem ;
-		background: #000;
+		//background: #000;
+	//	-webkit-box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+	//	box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+	}
+	ul[data-js=menu-ul]{
+	 	display:none;
+	
 	}
 	.toggle .fa{
+		width:40px;
+		height:40px;
+		display:flex;
+		justify-content:center;
+		align-items:center;
 		font-size: 2rem;
 		background: #ffff;
+	//	border:2px solid #333;
+	-webkit-box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+	box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
 	}
 	main{
 		padding: 1rem 0.5rem ;
@@ -241,12 +255,13 @@ footer a {
 	header {
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: reverse;
-		    -ms-flex-direction: column-reverse;
-		        flex-direction: column-reverse;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
 		/* justify-content: flex-end; */
-		min-height: 30vh;
+		//min-height: 30vh;
 	}
 	nav {
+		margin-top:-1rem%;
 		margin-bottom: 1rem;
 		width: 100%;
 	}
@@ -312,5 +327,12 @@ footer a {
 	.contact_img img {
 		width: 100%;
 		display: block;
+	}
+	ul.active{
+		display:flex;
+	}
+	.header_text a{
+	
+	font-size:1.5rem;
 	}
 }
