--- a/clone/style.css
+++ b/clone/style.css
@@ -23,7 +23,7 @@ nav ul {
 }
 nav {
 	align-self: flex-end;
-	max-height: 55px;
+	/* max-height: 55px; */
 }
 header {
 	justify-content: space-between;
@@ -195,6 +195,7 @@ footer a {
 	}
 	nav {
 		width: 100%;
+		max-height: auto;
 	}
 	nav ul {
 		max-width: 100%;
