--- a/clone/style.css
+++ b/clone/style.css
@@ -2,7 +2,7 @@
 	padding: 0;
 	margin: 0;
 	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
@@ -25,18 +25,14 @@ nav ul {
 	display: flex;
 }
 nav {
-<<<<<<< HEAD
-	align-self: flex-end;
-=======
 	-ms-flex-item-align: end;
-	    align-self: flex-end;
->>>>>>> 05b202b6a7ffc771cebcbe646948813afa383b1f
+	align-self: flex-end;
 	/* max-height: 55px; */
 }
 header {
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 }
 nav ul {
 	list-style: none;
@@ -44,7 +40,7 @@ nav ul {
 nav ul li {
 	margin-right: 10px;
 	-webkit-box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
-	        box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+	box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
 }
 .nav_link {
 	display: block;
@@ -61,8 +57,8 @@ nav ul li {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 }
 .header_text {
 	font-weight: 900;
@@ -84,7 +80,7 @@ main .hero {
 	border-top: 10px solid #c8c8c8;
 	border-bottom: 10px solid #c8c8c8;
 }
-.hero img{
+.hero img {
 	width: 100%;
 	display: block;
 	height: 100%;
@@ -106,11 +102,11 @@ main .hero {
 	display: flex;
 	text-align: center;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 }
 .content_desc p {
 	text-align: justify;
@@ -164,8 +160,8 @@ footer a {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 	color: #404040;
 	font-size: 2rem;
 }
@@ -174,11 +170,12 @@ footer a {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 	margin: 1rem 0 0;
 }
 .testimonial_desc {
+	text-align: left;
 	padding: 1rem 2rem;
 	color: #404040;
 	font-size: 1.2rem;
@@ -192,16 +189,27 @@ footer a {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	margin-top: 1rem;
+}
+.form {
+	background: #eeeef0;
+	color: #404040;
+}
+.form div:first-child {
+	margin-top: 1rem;
+	font-size: 1.5rem;
+	margin-left: 2rem;
+	font-weight: bold;
 }
 .contact .form {
-	min-width: 45%;
-	border-radius: 5%;
+	min-width: 48%;
+	border-radius: 2%;
 }
 .contact_info {
 	border-radius: 2%;
-	width: 45%;
+	width: 50%;
 	background: #efeff0;
 	padding: 1rem;
 	max-height: 460px;
@@ -219,53 +227,47 @@ footer a {
 	font-size: 1.2rem;
 	font-weight: 600;
 }
-.toggle{
+.toggle {
 	display: none;
 }
 @media (max-width: 900px) {
 	.toggle {
-		display:inline-block;
-		padding: 1rem ;
-		//background: #000;
-	//	-webkit-box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
-	//	box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+		display: inline-block;
+		padding: 1rem;
 	}
-	ul[data-js=menu-ul]{
-	 	display:none;
-	
+	ul[data-js='menu-ul'] {
+		display: none;
 	}
-	.toggle .fa{
-		width:40px;
-		height:40px;
-		display:flex;
-		justify-content:center;
-		align-items:center;
+	.toggle .fa {
+		width: 40px;
+		height: 40px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		font-size: 2rem;
-		background: #ffff;
-	//	border:2px solid #333;
-	-webkit-box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
-	box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+		-webkit-box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+		box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
 	}
-	main{
-		padding: 1rem 0.5rem ;
+	main {
+		padding: 1rem 0.5rem;
 	}
 	nav,
 	header {
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
 	}
 	header {
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: reverse;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
 		/* justify-content: flex-end; */
 		//min-height: 30vh;
 	}
 	nav {
-		margin-top:-1rem%;
+		margin-top: -1rem%;
 		margin-bottom: 1rem;
 		width: 100%;
 		max-height: auto;
@@ -273,28 +275,28 @@ footer a {
 	nav ul {
 		max-width: 100%;
 		-ms-flex-wrap: wrap;
-		    flex-wrap: wrap;
+		flex-wrap: wrap;
 		-ms-flex-pack: distribute;
-		    justify-content: space-around;
+		justify-content: space-around;
 	}
 	.testimonials .item {
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
 		text-align: center;
 	}
 	main .hero {
 		min-height: 170px;
 	}
-	.hero img{
+	.hero img {
 		min-height: 170px;
 	}
 	.content_desc {
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
 	}
 	.services_description {
 		padding: 2rem 1rem;
@@ -303,22 +305,21 @@ footer a {
 	.description {
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
 		padding: 1rem;
 	}
 	.contact {
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
 	}
 	.contact_info {
 		margin-top: 2rem;
 		width: 100%;
 	}
-	nav ul li{
-
+	nav ul li {
 		width: 45%;
 		margin-top: 1rem;
 	}
@@ -333,11 +334,10 @@ footer a {
 		width: 100%;
 		display: block;
 	}
-	ul.active{
-		display:flex;
+	ul.active {
+		display: flex;
 	}
-	.header_text a{
-	
-	font-size:1.5rem;
+	.header_text a {
+		font-size: 1.5rem;
 	}
 }
